feat(auth): Refactor authentication system and implement responsive theme toggle

--- a/LungLife/lunglife_frontend/src/app/app.component.html
+++ b/LungLife/lunglife_frontend/src/app/app.component.html
@@ -8,5 +8,6 @@
   </ng-container>
   <ng-template #appReady>
     <ion-router-outlet></ion-router-outlet>
+    <app-theme-toggle></app-theme-toggle>
   </ng-template>
 </ion-app>
